[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "PyLTSpice"
version = "5.4.2"
description = "A set of tools to Automate LTSpice simulations"
authors = ["Nuno Brum <me@nunobrum.com>"]
license = "GPL-3.0-only"
readme = "README.md"
repository = "https://github.com/nunobrum/PyLTSpice"
homepage = "https://github.com/nunobrum/PyLTSpice"
keywords = ["ltspice", "simulation", "automation"]

[tool.poetry.dependencies]
python = ">=3.10,<4.0"
kupicelib = ">=1.4.1"
kupicelib = "^1.0.0"

[tool.poetry.dev-dependencies]
pytest = "^7.0.0"

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/nunobrum/PyLTSpice/issues"
"Author" = "https://www.nunobrum.com/"

# Keeping setuptools configuration for compatibility
[project]
name = "PyLTSpice"
version = "5.4.2"
authors = [
  { name="Nuno Brum", email="me@nunobrum.com" },
]
description = "A set of tools to Automate LTSpice simulations"
readme = "README.md"
license = { file="LICENSE" }
requires-python = ">=3.10,<4.0"
dependencies = [
    "kupicelib>=1.4.1",
]
classifiers=[
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
]

[tool.setuptools.packages.find]
# All the following settings are optional:
where = ["."]  # ["."] by default
include = ["*"]  # ["*"] by default
exclude = [".idea", "doc", "doc_build", ".vscode", ".git"]  # empty by default
namespaces = true  # true by default

[project.urls]
"Homepage" = "https://github.com/nunobrum/PyLTSpice"
"Bug Tracker" = "https://github.com/nunobrum/PyLTSpice/issues"
"Repository" = "https://github.com/nunobrum/PyLTSpice.git"
"Author" = "https://www.nunobrum.com/"